k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meta-tsundr
  labels:
    app.kubernetes.io/part-of: meta-tsundr
